# montytrain

policy/: Cargo.toml
policy/src/: inputs.rs  main.rs  model.rs
policy/src/data/: loader.rs  reader.rs
policy/src/model/: select_affine.rs
policy/src/model/select_affine/: bwd.cu  fwd.cu
