[package]
name = "policy"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[dependencies]
bullet_core = { package = "bullet_core", git = 'https://github.com/jw1912/bullet', rev = "57b47e115a7b79a52632e16801ff490821b39e16" }
bullet_cuda_backend = { package = "bullet_cuda_backend", git = 'https://github.com/jw1912/bullet', rev = "57b47e115a7b79a52632e16801ff490821b39e16" }
cudarc = "=0.16.4"
montyformat = "0.9.0"
rand = { version = "0.9.2", features = [ "small_rng" ] }
